app/assets/stylesheets/application-redesign.css.scss
/* ... */
.section-p-md {
  padding-top: 60px;
  padding-bottom: 60px;
}

@media (max-width: 767.98px) {
  .section-p-md {
    padding-top: 48px;
    padding-bottom: 48px;
  }
}

.section-pt-sm-pb-md {
  padding-top: 40px;
  padding-bottom: 60px;
}

@media (max-width: 767.98px) {
  .section-pt-sm-pb-md {
    padding-top: 24px;
    padding-bottom: 48px;
  }
}

.section-pb-md {
  padding-bottom: 60px;
}

@media (max-width: 767.98px) {
  .section-pb-md {
    padding-bottom: 48px;
  }
}

.section-p-sm {
  padding-top: 40px;
  padding-bottom: 60px;
}

@media (max-width: 767.98px) {
  .section-p-sm {
    padding-top: 24px;
    padding-bottom: 48px;
  }
}

.sub-section-pb-sm {
  padding-bottom: 20px;
}

@media (max-width: 767.98px) {
  .sub-section-pb-sm {
    padding-bottom: 12px;
  }
}

.text-monospace {
  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

.text-justify {
  text-align: justify !important;
}

.text-nowrap {
  white-space: nowrap !important;
}

.text-truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.text-left {
  text-align: left !important;
}

.text-right {
  text-align: right !important;
}

.text-center {
  text-align: center !important;
}

@media (min-width: 480px) {
  .text-xs-left {
    text-align: left !important;
  }
  .text-xs-right {
    text-align: right !important;
  }
  .text-xs-center {
    text-align: center !important;
  }
}

@media (min-width: 576px) {
  .text-sm-left {
    text-align: left !important;
  }
  .text-sm-right {
    text-align: right !important;
  }
  .text-sm-center {
    text-align: center !important;
  }
}

@media (min-width: 768px) {
  .text-md-left {
    text-align: left !important;
  }
  .text-md-right {
    text-align: right !important;
  }
  .text-md-center {
    text-align: center !important;
  }
}

@media (min-width: 992px) {
  .text-lg-left {
    text-align: left !important;
  }
  .text-lg-right {
    text-align: right !important;
  }
  .text-lg-center {
    text-align: center !important;
  }
}

@media (min-width: 1280px) {
  .text-xl-left {
    text-align: left !important;
  }
  .text-xl-right {
    text-align: right !important;
  }
  .text-xl-center {
    text-align: center !important;
  }
}

.text-lowercase {
  text-transform: lowercase !important;
}

.text-uppercase {
  text-transform: uppercase !important;
}

.text-capitalize {
  text-transform: capitalize !important;
}

.font-weight-light {
  font-weight: 300 !important;
}

.font-weight-normal {
  font-weight: 400 !important;
}

.font-weight-bold {
  font-weight: 700 !important;
}

.font-italic {
  font-style: italic !important;
}

.text-white {
  color: #fff !important;
}

.text-primary {
  color: #F0524D !important;
}

a.text-primary:hover, a.text-primary:focus {
  color: #ec241e !important;
}

.text-primary-text {
  color: #DE4B46 !important;
}

a.text-primary-text:hover, a.text-primary-text:focus {
  color: #cd2a24 !important;
}

.text-secondary {
  color: #434547 !important;
}

a.text-secondary:hover, a.text-secondary:focus {
  color: #2a2c2d !important;
}

.text-success {
  color: #44B174 !important;
}

a.text-success:hover, a.text-success:focus {
  color: #368c5c !important;
}

.text-info {
  color: #FFB600 !important;
}

a.text-info:hover, a.text-info:focus {
  color: #cc9200 !important;
}

.text-warning {
  color: #F0524D !important;
}

a.text-warning:hover, a.text-warning:focus {
  color: #ec241e !important;
}

.text-danger {
  color: #F0524D !important;
}

a.text-danger:hover, a.text-danger:focus {
  color: #ec241e !important;
}

.text-light {
  color: #F1F3F3 !important;
}

a.text-light:hover, a.text-light:focus {
  color: #d6dbdb !important;
}

.text-dark {
  color: #292C2D !important;
}

a.text-dark:hover, a.text-dark:focus {
  color: #111212 !important;
}

.text-gold {
  color: #FFAA47 !important;
}

a.text-gold:hover, a.text-gold:focus {
  color: #ff9214 !important;
}

.text-silver {
  color: #CDCDCD !important;
}

a.text-silver:hover, a.text-silver:focus {
  color: #b4b4b4 !important;
}

.text-bronze {
  color: #D88151 !important;
}

a.text-bronze:hover, a.text-bronze:focus {
  color: #c9642d !important;
}

.text-body {
  color: #5D5F60 !important;
}

.text-muted {
  color: #77797A !important;
}

.text-black-50 {
  color: rgba(0, 0, 0, 0.5) !important;
}

.text-white-50 {
  color: rgba(255, 255, 255, 0.5) !important;
}

.text-hide {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}

.visible {
  visibility: visible !important;
}

.invisible {
  visibility: hidden !important;
}

@media print {
  *,
  *::before,
  *::after {
    text-shadow: none !important;
    box-shadow: none !important;
  }
  a:not(.btn) {
    text-decoration: underline;
  }
  abbr[title]::after {
    content: " (" attr(title) ")";
  }
  pre {
    white-space: pre-wrap !important;
  }
  pre,
  blockquote {
    border: 1px solid #77797A;
    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
  @page {
    size: a3;
  }
  body {
    min-width: 992px !important;
  }
  .container {
    min-width: 992px !important;
  }
  .navbar {
    display: none;
  }
  .badge {
    border: 1px solid #000;
  }
  .table {
    border-collapse: collapse !important;
  }
  .table td,
  .table th {
    background-color: #fff !important;
  }
  .table-bordered th,
  .table-bordered td {
    border: 1px solid #AAACAD !important;
  }
  .table-dark {
    color: inherit;
  }
  .table-dark th,
  .table-dark td,
  .table-dark thead th,
  .table-dark tbody + tbody {
    border-color: #AAACAD;
  }
  .table .thead-dark th {
    color: inherit;
    border-color: #AAACAD;
  }
}
/* ... */

